[0, 15, 11]: 2017-06-24
  - fix for issue 130, regression in nested merge keys (reported by
    `David Fee <https://bitbucket.org/dfee/>`_)

[0, 15, 10]: 2017-06-24
  - fix for issue 130, regression in nested merge keys (reported by
    `David Fee <https://bitbucket.org/dfee/>`_)

[0, 15, 10]: 2017-06-23
  - top level PreservedScalarString not indented if not explicitly asked to
  - remove Makefile (not very useful anyway)
  - some mypy additions

[0, 15, 9]: 2017-06-16
  - fix for issue 127: tagged scalars were always quoted and seperated
    by a newline when in a block sequence (reported and largely fixed by
    `Tommy Wang <https://bitbucket.org/twang817/>`_)

[0, 15, 8]: 2017-06-15
  - allow plug-in install via ``install ruamel.yaml[jinja2]``

[0, 15, 8]: 2017-06-15
  - allow plug-in install via ``install ruamel.yaml[jinja2]``

[0, 15, 7]: 2017-06-14
  - add plug-in mechanism for load/dump pre resp. post-processing

[0, 15, 6]: 2017-06-10
  - a set() with duplicate elements now throws error in rt loading
  - support for toplevel column zero literal/folded scalar in explicit documents

[0, 15, 5]: 2017-06-08
  - repeat `load()` on a single `YAML()` instance would fail.

(0, 15, 4) 2017-06-08: |
  - `transform` parameter on dump that expects a function taking a
    string and returning a string. This allows transformation of the output
    before it is written to stream.
  - some updates to the docs

(0, 15, 3) 2017-06-07:
  - No longer try to compile C extensions on Windows. Compilation can be forced by setting
    the environment variable `RUAMEL_FORCE_EXT_BUILD` to some value
    before starting the `pip install`.

(0, 15, 2) 2017-06-07:
  - update to conform to mypy 0.511:mypy --strict

(0, 15, 1) 2017-06-07:
  - Any `duplicate keys  <http://yaml.readthedocs.io/en/latest/api.html#duplicate-keys>`_
    in mappings generate an error (in the old API this change generates a warning until 0.16)
  - dependecy on ruamel.ordereddict for 2.7 now via extras_require
